# autoresearch-fork

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.json
.claude/hooks/: session-bearings.sh  source-doc-context.py
.loom/: loom.toml  weft.md
docs/: CHARTER.md  README.md  roadmap.md
docs/architecture/: conventions.md  index.md  roadmap.md
docs/config/: charter.md  roadmap.md
docs/plans/: .gitkeep  2026-06-13-background-tokens.md  2026-06-13-header-row.md  2026-06-13-multi-table-4a-generalize.md  2026-06-13-multi-table-4b-instances-region.md  2026-06-13-multi-table-4c-globals-eob.md  2026-06-13-multi-token-cells.md  2026-06-13-synth-toolkit-backbone.md  2026-06-13-v0-loop-closes-plan.md  2026-06-14-realistic-spacing-jitter.md  2026-06-14-spanning-cells-grouped-headers.md  (+10 more)
harness/: README.md  pyproject.toml
harness/src/tablelab/: artifacts.py  build.py  classes.py  cli.py  fields.py  generate.py  jitter.py  layout.py  metrics.py  mock_run.py  render.py  specs.py
harness/tablelab/: generate.py
harness/tests/: _cells.py  test_background.py  test_capacity.py  test_contract_roundtrip.py  test_globals.py  test_golden.py  test_header.py  test_jitter.py  test_mock_run.py  test_multi_table.py  test_multi_token.py  test_regions.py  test_spacing.py  test_spanning.py  test_targets.py  test_word_split.py  test_wrap.py
harness/tests/golden/: invoice_seed7_n3.json
runs/: index.json
scripts/: doc-lint.py
tablelab/: artifacts.py  device.py
viewer/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+49 files in other folders)
