[project]
name = "autoresearch"
version = "0.1.0"
description = "From-scratch lab for document table extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2",
    "pillow>=10",
    "torch>=2.9",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
